--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "google-maps-react": "^2.0.6",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
+    "randomstring": "^1.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
